app01_manifests/production/increase_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
spec:
  replicas: 3
  revisionHistoryLimit: 3
