app01_manifests/production/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app01-ingress-rule
spec:
  ingressClassName: nginx
  rules:
  - host: app01.tradingaps.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app01-service
            port: 
              number: 80
  tls:
  - hosts:
      - app01.tradingaps.com
    secretName: app01
